syntax = "proto3";
package publicawesome.stargaze.globalfee.v1;

import "gogoproto/gogo.proto";
import "stargaze/globalfee/v1/globalfee.proto";

option go_package = "github.com/public-awesome/stargaze/v12/x/globalfee/types";

// Msg defines the alloc Msg service.
service Msg {
  rpc SetCodeAuthorization(MsgSetCodeAuthorization)
      returns (MsgSetCodeAuthorizationResponse);

  rpc RemoveCodeAuthorization(MsgRemoveCodeAuthorization)
      returns (MsgRemoveCodeAuthorizationResponse);

  rpc SetContractAuthorization(MsgSetContractAuthorization)
      returns (MsgSetContractAuthorizationResponse);

  rpc RemoveContractAuthorization(MsgRemoveContractAuthorization)
      returns (MsgRemoveContractAuthorizationResponse);
}

message MsgSetCodeAuthorization {
  string sender = 1;
  CodeAuthorization code_authorization = 2;
}

message MsgSetCodeAuthorizationResponse {}

message MsgRemoveCodeAuthorization {
  string sender = 1;
  uint64 code_id = 2 [ (gogoproto.customname) = "CodeID" ];
}

message MsgRemoveCodeAuthorizationResponse {}

message MsgSetContractAuthorization {
  string sender = 1;
  ContractAuthorization contract_authorization = 2;
}

message MsgSetContractAuthorizationResponse {}

message MsgRemoveContractAuthorization {
  string sender = 1;
  string contract_address = 2;
}

message MsgRemoveContractAuthorizationResponse {}
